--- a/themes/somrat-master/static/plugins/webgl/threejs/style.css
+++ b/themes/somrat-master/static/plugins/webgl/threejs/style.css
@@ -13,6 +13,7 @@
 .about-me {
     background: rgba(0, 0, 0, 0.5) !important;
 }
+
 .experience-chart li p {
     color: whitesmoke !important; 
 }
@@ -43,4 +44,17 @@ h3 {
 }
 ul.experience-chart h4 {
     color: #ffffff !important;
+}
+@media (max-height: 535px) and (max-width: 468px) {
+    .last-name {
+        font-size: 35px !important;
+        line-height: 1 !important;
+    }
+}
+
+@media (max-width: 469px) and (min-height: 536px) {
+    .last-name {
+        font-size: 35px !important;
+        line-height: 1 !important;
+    }
 }
